updated to react-codemirror2 and abstracted code chunk creation and handling to increase speed. spead increased. stilla bit laggy on chrome but less than it was. changed way data is handled between pages with sessionStorage. Fixed so works on firefox as well.

--- a/src/components/ProgramDebugView.css
+++ b/src/components/ProgramDebugView.css
@@ -29,8 +29,8 @@
   position: relative;
 }
 
-.ReactCodeMirror.debug {
-  width: unset;
+.react-codemirror2.debug {
+  width: -webkit-fill-available;
   position: relative;
   display: grid;
   overflow-x: auto;
